syntax = "proto3";

option java_package = "studio.lunabee.onesafe.storage";
option java_outer_classname = "OSPasswordGeneratorConfigProto";

message PasswordGeneratorConfigProto {
  uint32 length = 1;
  bool includeUpperCase = 2;
  bool includeLowerCase = 3;
  bool includeNumber = 4;
  bool includeSymbol = 5;
};